// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords collapsed with all options 1`] = `
<div
  className="bubbles-wrapper"
  id="groups-menu-filter"
>
  <GroupsMenuFilterBubble
    key="invalidated"
    name="invalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterBubble
    key="reminders"
    name="reminders"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterBubble
    key="selections"
    name="selections"
    setFilter={[Function]}
    text="tools.selected"
  />
  <GroupsMenuFilterBubble
    key="noSelections"
    name="noSelections"
    setFilter={[Function]}
    text="tools.no_selection"
  />
  <GroupsMenuFilterBubble
    key="verseEdits"
    name="verseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterBubble
    key="comments"
    name="comments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords collapsed with no options 1`] = `
<div
  className="bubbles-wrapper"
  id="groups-menu-filter"
/>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords expanded 1`] = `
<div
  className="options-wrapper"
  id="groups-menu-filter"
>
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <InvalidatedIcon
        color="#fff"
        height={16}
        width={16}
      />
    }
    key="invalidated"
    name="invalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="bookmark"
      />
    }
    key="reminders"
    name="reminders"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={true}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ok"
      />
    }
    key="selections"
    name="selections"
    setFilter={[Function]}
    text="tools.selected"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={true}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ban-circle"
      />
    }
    key="noSelections"
    name="noSelections"
    setFilter={[Function]}
    text="tools.no_selection"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="pencil"
      />
    }
    key="verseEdits"
    name="verseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="comment"
      />
    }
    key="comments"
    name="comments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords expanded with 3 options checked 1`] = `
<div
  className="options-wrapper"
  id="groups-menu-filter"
>
  <GroupsMenuFilterOption
    checked={false}
    disabled={false}
    icon={
      <InvalidatedIcon
        color="#fff"
        height={16}
        width={16}
      />
    }
    key="invalidated"
    name="invalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="bookmark"
      />
    }
    key="reminders"
    name="reminders"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterOption
    checked={false}
    disabled={true}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ok"
      />
    }
    key="selections"
    name="selections"
    setFilter={[Function]}
    text="tools.selected"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ban-circle"
      />
    }
    key="noSelections"
    name="noSelections"
    setFilter={[Function]}
    text="tools.no_selection"
  />
  <GroupsMenuFilterOption
    checked={false}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="pencil"
      />
    }
    key="verseEdits"
    name="verseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="comment"
      />
    }
    key="comments"
    name="comments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;
